# GoogleNews

./: .gitignore  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
GoogleNews/: GoogleNews.py  NewsResult.py  __init__.py
GoogleNews/models/: Result.py  __init__.py
tests/: test_search.py
